option('tests', type: 'feature', description: 'Build tests')

option(
    'host-busname', type: 'string',
    value: 'xyz.openbmc_project.State.Host',
    description: 'The Host DBus busname to own.',
)

option(
    'host-objpath', type: 'string',
    value: '/xyz/openbmc_project/state/host',
    description: 'The host state manager Dbus root.',
)

option(
    'hypervisor-busname', type: 'string',
    value: 'xyz.openbmc_project.State.Hypervisor',
    description: 'The Hypervisor DBus busname to own.',
)

option(
    'hypervisor-objpath', type: 'string',
    value: '/xyz/openbmc_project/state/hypervisor',
    description: 'The hypervisor state manager Dbus root.',
)

option(
    'chassis-busname', type: 'string',
    value: 'xyz.openbmc_project.State.Chassis',
    description: 'The Chassis DBus busname to own.',
)

option(
    'chassis-objpath', type: 'string',
    value: '/xyz/openbmc_project/state/chassis',
    description: 'The chassis state manager Dbus root.',
)

option(
    'bmc-busname', type: 'string',
    value: 'xyz.openbmc_project.State.BMC',
    description: 'The BMC DBus busname to own.',
)

option(
    'bmc-objpath', type: 'string',
    value: '/xyz/openbmc_project/state/bmc',
    description: 'The bmc state manager Dbus root.',
)

option(
    'host-state-persist-path', type: 'string',
    value: '/var/lib/phosphor-state-manager/host{}-PersistData',
    description: 'Path format of file for storing requested HostState,boot progress and os status.',
)

option(
    'poh-counter-persist-path', type: 'string',
    value: '/var/lib/phosphor-state-manager/chassis{}-POHCounter',
    description: 'Path format of file for storing POH counter.',
)

option(
    'chassis-state-change-persist-path', type: 'string',
    value: '/var/lib/phosphor-state-manager/chassis{}-StateChangeTime',
    description: 'Path format of file for storing the state change time.',
)

option(
    'scheduled-host-transition-persist-path', type: 'string',
    value: '/var/lib/phosphor-state-manager/scheduledHostTransition',
    description: 'Path of file for storing the scheduled time and the requested transition.',
)

option(
    'boot-count-max-allowed', type: 'integer',
    value: 3,
    description: 'The maximum allowed reboot count.',
)

option(
    'scheduled-host-transition-busname', type: 'string',
    value: 'xyz.openbmc_project.State.ScheduledHostTransition',
    description: 'The scheduled host transition Dbus busname to own.',
)

option('warm-reboot', type : 'feature',
    value : 'enabled',
    description : 'Enable warm reboots of the system',
)

option('host-gpios', type : 'feature',
    value : 'disabled',
    description : 'Enable gpio mechanism to check host state.',
)

option('host-gpios-busname', type : 'string',
    value : 'xyz.openbmc_project.State.HostCondition.Gpio',
    description : 'The host gpios Dbus busname to own.',
)

option('host-gpios-objpath', type : 'string',
    value : '/xyz/openbmc_project/Gpios',
    description : 'The host gpios Dbus root.',
)

option('sysfs-secure-boot-path', type : 'string',
    value : '/sys/kernel/debug/aspeed/sbc/secure_boot',
    description : 'The sysfs path to the secure boot value.',
)

option('sysfs-abr-image-path', type : 'string',
    value : '/sys/kernel/debug/aspeed/sbc/abr_image',
    description : 'The sysfs path to the abr image value.',
)
